src/test/ui/rfc-2627-raw-dylib/feature-gate-raw-dylib-2.stderr
error[E0658]: the `#[link_ordinal]` attribute is an experimental feature
  --> $DIR/feature-gate-raw-dylib-2.rs:3:5
   |
LL |     #[link_ordinal(42)]
   |     ^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #58713 <https://github.com/rust-lang/rust/issues/58713> for more information
   = help: add `#![feature(raw_dylib)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
